--- a/desafio03.html
+++ b/desafio03.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <title>desafio03.css</title>
+    <title>projeto-WIDE-COVERAGE-LOCATION</title>
 </head>
 
 <body>
